[package]
name = "serde_nbt"
version = "0.1.0"

edition = "2021"

################################################################################
# Features
################################################################################

[features]

# By default serde_nbt supports using the standard library to encode and decode
# only the Minecraft: Java Edition's specification of NBT to match the baseline
# functionality of other NBT libraries.
default = ["compression", "java"]

# Enables the Minecraft: Bedrock Edition's little-endian specification of NBT
# designed for disk.
bedrock_disk = ["binary"]

# Enables the Minecraft: Bedrock Edition's VarInt specification of NBT intended
# for use over the network.
bedrock_network = ["bedrock_disk", "dep:mini_leb128", "dep:zende"]

# Enables built-in support for gzip or zlib compression/decompression like a
# developer might find in the wild. Requires the use of the standard library.
compression = ["std", "dep:flate2"]

# Enables the Minecraft: Java Edition's specification of NBT.
java = ["binary"]

# Enables the NBT path format which is frequently used in Minecraft's chat and
# command line. For more information, refer to the wiki page here:
# https://minecraft.fandom.com/wiki/NBT_path_format
path = ["snbt"]

# Enables the SNBT format. No binary format is required for this feature to
# work.
snbt = ["dep:arrayvec", "dep:ryu"]

# Enables the use of the standard library to add no_std compatability for those
# who need it.
std = ["indexmap/std", "serde/std", "zc_io/std"]

################################################################################
# Internal Features
################################################################################

# An internal feature. This is used to implement the serde framework used for
# binary specification.
binary = []

################################################################################
# Dependencies
################################################################################

# We use ahash by default for easier no_std compatability. This was decided
# since it is the default provided by hashbrown which is then used for indexmap.
[dependencies.ahash]
version = "0.8"
default-features = false
features = ["runtime-rng"]

[dependencies.arrayvec]
version = "0.7"
optional = true
default-features = false

# The backing implementation of the "compression" feature.
[dependencies.flate2]
version = "1"
optional = true

# We explicitly add these features to force their performance uplifts given that
# indexmap does not enable them by default.
[dependencies.hashbrown]
version = "0.13"
default-features = false
features = ["ahash", "inline-more"]

# This is what backs the "preserve_order" feature.
[dependencies.indexmap]
version = "1"
default-features = false
features = ["serde"]

# Quickly convert integer primitives to strings for serializing such keys in
# either binary or SNBT formats.
[dependencies.itoa]
version = "1"

# LEB128 encoding/decoding for use with the bedrock_network feature.
[dependencies.mini_leb128]
version = "0.1"
optional = true

[dependencies.ryu]
version = "1"
optional = true

# "I wonder what this is for," he lied, like a liar.
[dependencies.serde]
version = "1"
default-features = false
features = ["alloc"]

# A library for zero-copy I/O. This is what the internal I/O traits are built
# on top of. Enabling the "std" feature for zc_io is what enables I/O reader and
# writer support for this package.
[dependencies.zc_io]
version = "0.2"
default-features = false

# A zigzag encoding and decoding library used for the Minecraft: Bedrock
# Edition's VarInt specification.
[dependencies.zende]
version = "0.1"
optional = true

################################################################################
# Developer Dependencies
################################################################################

[dev-dependencies.serde]
version = "1"
features = ["derive"]

################################################################################
# Miscellaneous Metadata
################################################################################

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
